UPDATE Backend endpoints
